# logits-processor-zoo

./: CONTRIBUTING.md  README.md  pyproject.toml
example_notebooks/transformers/: cite_prompt_logits_processor.ipynb  force_last_phrase_logits_processor.ipynb  gen_length_logits_processor.ipynb  multiple_choice_logits_processor.ipynb  prevent_hallucination_logits_processor.ipynb  trigger_phrase_logits_processor.ipynb  utils.py
example_notebooks/trtllm/: README.md
example_notebooks/vllm/: cite_prompt_logits_processor.ipynb  force_last_phrase_logits_processor.ipynb  gen_length_logits_processor.ipynb  multiple_choice_logits_processor.ipynb  performance_profiling.ipynb  prevent_hallucination_logits_processor.ipynb  trigger_phrase_logits_processor.ipynb  utils.py
examples/transformers/: cite_prompt_logits_processor.ipynb  force_last_phrase_logits_processor.ipynb  gen_length_logits_processor.ipynb  max_time_logits_processor.ipynb  multiple_choice_logits_processor.ipynb  prevent_hallucination_logits_processor.ipynb  trigger_phrase_logits_processor.ipynb
examples/trtllm/: README.md  max_time_logits_processor.py  multiple_choice_logits_processor.py  prevent_hallucination_logits_processor.py  trigger_phrase_logits_processor.py
examples/vllm/: cite_prompt_logits_processor.ipynb  force_last_phrase_logits_processor.ipynb  gen_length_logits_processor.ipynb  max_time_logits_processor.ipynb  multiple_choice_logits_processor.ipynb  performance_profiling.ipynb  prevent_hallucination_logits_processor.ipynb  trigger_phrase_logits_processor.ipynb  (+1 more)
tests/: conftest.py  test_utils.py
(+37 files in other folders)
