[tool.poetry]
name = "logits-processor-zoo"
version = "0.1.0"
description = "Logits Processor Zoo"
authors = ["aerdem <aerdem@nvidia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"
transformers = "^4.41.2"
accelerate = "^0.26.1"
vllm = { version = "^0.5.0.post1", optional = true }

[tool.poetry.extras]
vllm = ["vllm"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
